# super-tracker-nz

./: Cargo.toml  LICENSE.md  README.md
data-scraper/: .gitignore  Cargo.toml  DBSchema.md  countdown.json  docker-compose.yml
data-scraper/migration/src/: m20220101_000001_create_table.rs
data-scraper/src/: config.rs  main.rs
data-scraper/src/db/: connection.rs  mod.rs  products.rs  supermarkets.rs
data-scraper/src/db/entities/: mod.rs  prelude.rs  product_db.rs  supermarket_price.rs  supermarkets.rs
data-scraper/src/supermarkets/: mod.rs
data-scraper/src/supermarkets/countdown/: api_response.rs  fetch.rs  mod.rs  product_matcher.rs
web-app/: Cargo.toml
web-app/src/: lib.rs  main.rs
web-app/src/components/: histogram.rs
