[package]
name = "data-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]


[dependencies]
migration = { path = "migration" } # depends on your needs


tokio = { version = "1", features = ["full"] }
clokwerk = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2.0"
chrono = {version="*", features = ["serde"]}
dotenv = "0.15.0"
reqwest = {version="0.11.22", features = ["json"]}
webhook = "2.1.2"
sea-orm = { version = "0.12.4", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
once_cell = "1.18.0"
pretty_flexible_env_logger = "0.1.0"
log = "0.4.20"
circular-buffer = "0.1.3"
